2004-07-13  Earnie Boyd  <earnie@users.sourcefourge.net>

	* include/_mingw.h: Increment minor version for 3.4 release.
	* Makefile.in: Ditto.

2004-07-12  Danny Smith  <dannysmith@users.sourceforge.net>

	* mingwex/math/cephes_emath.h (__etens): Remove declaration.

2004-07-11  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/unistd.h (ftruncate): Add inline definition.
	* mingwex/ftruncate.c: New file.
	* mingwex/Makefile.in: Add ftruncate.o to libmingwex.a.

2004-07-10  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/time.h: Do not include sys/types.h.

2004-07-02  Danny Smith  <dannysmith@users.sourceforge.net>

	* mingwex/Makefile.in (MATH_DISTFILES): Remove pow.c,
	(MATH_OBJS): Remove pow,o.
	* include/math.h (pow): Declare with _CRTIMP.
	Add comment on how to avoid excess precision problems.

2004-06-30  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/stdio.h (__mingw_fseeko64): Add prototype.
	* mingwex/mingw-fseek.c (__mingw_fseeko64): Add definition.
	(__mingw_fwrite): Handle huge files.

2004-06-30  Kees Zeelenberg  <kzlg@users.sourceforge.net>
            Danny Smith  <dannysmith@users.sourceforge.net>

	* include/stdio.h (fopen64): Add inline function.
	(fseeko64): Add prototype.
	(ftello64): Add inline function.
	* include/io.h (lseek64): Add inline function.
	* include/sys/types (off64_t): Add typedef.
	(fpos64_t): Add typedef.
        * mingwex/fopen64.c: New file.
        * mingwex/fseeko64.c: New file.
        * mingwex/ftello64.c: New file.
        * mingwex/lseek64.c: New file.
	* mingwex/Makefile.in (STDIO_DISTFILES): Add fopen64.c,
	fseeko.64.c, ftello64.c, lseek64.c. 
	(STDIO_OBJS): Add fopen64.o, fseeko.64.o, ftello64.o, lseek64.o.

2004-04-24  Luke Dunstan  <infidel@users.sourceforge.net>

	* include/limits.h (_I64_MIN, _I64_MAX, _UI64_MAX): Add defines.

2004-04-22  Earnie Boyd  <earnie@users.sf.net>

	* DISCLAIMER: Add words about "free to use".
	* README: Modify "Win32 runtime" to "Microsoft C Runtime".