@@ -1,5 +1,6 @@
 2004-07-13  Earnie Boyd  <earnie@users.sourcefourge.net>
 
+	* include/limits.h: Change to new file header preamble.
 	* include/_mingw.h: Increment minor version for 3.4 release.
 	* Makefile.in: Ditto.
 
